yaml format fix